fix: set z-index to 10 to fix bugs

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -135,7 +135,7 @@ h2 {
   table thead th {
     position: sticky;
     top: 0;
-    z-index: 9999;
+    z-index: 10;
     background-color: #d0d0d0;
     border: 1px solid transparent;
   }
